@@ -2,22 +2,22 @@
  * JFugue - API for Music Programming
  * Copyright (C) 2003-2008  David Koelle
  *
- * http://www.jfugue.org 
- * 
+ * http://www.jfugue.org
+ *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
  * License as published by the Free Software Foundation; either
  * version 2.1 of the License, or any later version.
- * 
+ *
  * This library is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * Lesser General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
- *  
+ *
  */
 
 package org.jfugue;
@@ -33,22 +33,22 @@ import javax.sound.midi.Track;
 
 /**
  * Takes the events in a MIDI sequence and places them into a time-based
- * map.  This is done so the events can be played back in order of when 
+ * map.  This is done so the events can be played back in order of when
  * the events occur, regardless of the tracks they happen to be in.  This is
- * useful when sending events to an external device, or any occasion 
+ * useful when sending events to an external device, or any occasion
  * when iterating through the tracks is not useful because the tracks would be
  * played sequentially rather than in parallel.
- *  
+ *
  * @author David Koelle
  * @version 3.0
  */
-public final class TimeEventManager 
+public final class TimeEventManager
 {
     public static final long sortSequenceByTimestamp(Sequence sequence, Map<Long, List<MidiEvent>> timeMap)
     {
         // Keep track of how long the sequence is
         long longestTime = 0;
-        
+
         // Iterate through the tracks, and store the events into our time map
         Track[] tracks = sequence.getTracks();
         for (int i=0; i < tracks.length; i++)
@@ -63,13 +63,13 @@ public final class TimeEventManager
                 List<MidiEvent> list = null;
                 if ((list = (ArrayList<MidiEvent>)timeMap.get(timestamp)) == null)
                 {
-                    // Add a new list to the map if one doesn't already exist 
+                    // Add a new list to the map if one doesn't already exist
                     // for the timestamp in question
                     list = new ArrayList<MidiEvent>();
                     timeMap.put(timestamp, list);
-                } 
+                }
                 list.add(event);
-                
+
                 // Update the longest time known, if required
                 if (timestamp > longestTime)
                 {
@@ -77,10 +77,10 @@ public final class TimeEventManager
                 }
             }
         }
-        
+
         return longestTime;
     }
-    
+
     /**
      * Returns the events from this sequence in temporal order.  This is
      * done in a two step process:
@@ -93,19 +93,19 @@ public final class TimeEventManager
     {
         Map<Long, List<MidiEvent>> timeMap = new HashMap<Long, List<MidiEvent>>();
         long longestTime = sortSequenceByTimestamp(sequence, timeMap);
-        
+
         List<MidiEvent> totalList = new ArrayList<MidiEvent>();
-        
+
         for (long l=0; l < longestTime; l++)
         {
-            Long key = new Long(l);
+            Long key = Long.valueOf(l);
             if (timeMap.containsKey(key))
             {
-                List<MidiEvent> list = (List<MidiEvent>)timeMap.get(key);
+                List<MidiEvent> list = timeMap.get(key);
                 totalList.addAll(list);
             }
         }
-        
+
         return totalList;
     }
 }
