@@ -126,10 +126,12 @@ public abstract class ModelAbstractOscillator
     public ModelOscillatorStream open(float samplerate) {
         ModelAbstractOscillator oscs;
         try {
-            oscs = this.getClass().newInstance();
+            oscs = this.getClass().getDeclaredConstructor().newInstance();
         } catch (InstantiationException e) {
             throw new IllegalArgumentException(e);
         } catch (IllegalAccessException e) {
+            throw new IllegalArgumentException(e);
+        } catch (ReflectiveOperationException e) {
             throw new IllegalArgumentException(e);
         }
         oscs.setSampleRate(samplerate);
